--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Open Graph -->
+  <meta property="og:title" content="Supreme Development">
+  <meta property="og:description" content="Modern and powerful software built by Supreme.">
+  <meta property="og:image" content="https://supreme.dev.tc/icons/preview.png">
+  <meta property="og:url" content="https://supreme.dev.tc">
+  <meta property="og:type" content="website">
+
+  <title>Supreme — Official Website</title>
+  <link rel="icon" href="/icons/favicon.png">
+  <link rel="stylesheet" href="/css/index.css">
+</head>
+<body>
+  <div class="container">
+    <div class="logo">Supreme<span>.</span></div>
+    <h1>Welcome to the <span>Future</span></h1>
+    <p>Innovative • Secure • Limitless</p>
+    <a href="#explore" class="btn">Explore Now</a>
+  </div>
+  <div class="bg"></div>
+</body>
+</html>
