--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <title>Supreme — Official Website</title>
   <link rel="icon" href="/icons/favicon.png">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/theme.css">
 </head>
 <body>
   <div class="container">
