--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:url" content="https://supreme.dev.tc" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/theme.css" />
 </head>
 <body>
   <header class="hero">
