--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   <link rel="stylesheet" href="css/theme.css" />
 </head>
   <body>
-    Coming soon...
+    <footer class="text-center">
+    <div class="container">
+      <img src="Icons/favicon.ico" alt="Supreme Icon" width="28" style="vertical-align:middle;margin-right:6px;">
+      <span>Coming soon...</span>
+    </div>
+  </footer>
   </body>
 </html>
